# sturnkey

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  UPSTREAM.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  http.md  socks5.md
docs/api/: filesystem.md  network.md  runtime.md
examples/: async.js  copy.js  file-server.js  hello.js  socks5.js  tcp-echo.js  tree.js  web-app.js
lib/: http.js  io.js
runtime/src/: filesystem.cpp  network.cpp  runtime.cpp
tests/: async-invalid.js  async-rejection.js  async-sleep.js  expect-failure.sh  filesystem.js  http-file-server.mjs  http-test-utils.mjs  http-web-app.mjs  socks5.mjs  tcp-client.js  tcp-client.mjs  tcp-listener.js  tcp-listener.mjs
